--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ venv
 data
 F_Detector/restarted_logs.py
 F_Detector/.pytest_cache
+F_Detector/evaluate.py
+F_Detector/auto_evaluate.py
+QT_interface
