--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-click==7.1.2
 matplotlib==3.3.2
+numpy==1.19.2
 prettytable==1.0.0
 PyMySQL==0.10.1
-pytest==5.3.5
-requests==2.23.0
+pandas==1.1.4
+click==7.1.2
+seaborn==0.11.0
+requests==2.24.0
+scikit_learn==0.23.2
